# astroScout

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  NEXT_STEPS_RECOMMENDATIONS.md  README.md  STATE.md  TASK_B1_FINAL_CLEANUP.md  cline_tasks.md  cline_tasks_track_c.md  implementation_plan.md  implementation_plan_live_eval.md  implementation_plan_task2.md  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  repomix-output.xml  vercel.json
.github/workflows/: ci.yml
apps/api/: AGENTS.md  Dockerfile  README.md  main.py  pyproject.toml
apps/api/scripts/: build_bortle_grid.py  build_bortle_grid_viirs.py  ingest_knowledge.py  validate_sources.py
apps/api/src/astroscout_api/: __init__.py  budget.py  config.py  main.py  params.py  protection.py  scoring.py
apps/api/src/astroscout_api/bortle/: __init__.py  bortle_grid.npy  calibration.py  cities.py  grid.py  model.py  sqm_grid.npy
apps/api/src/astroscout_api/datasources/: __init__.py  catalog.py  dso_catalog.py  literature.py  planning.py  targets.py  visibility.py
apps/api/src/astroscout_api/rag/: __init__.py  chunking.py  embeddings.py  ingest.py  store.py
apps/api/src/astroscout_api/routers/: errors.py  planning.py  visibility.py
apps/api/tests/: conftest.py  test_bortle.py  test_budget.py  test_chunking.py  test_config.py  test_dark_window.py  test_datasources_integration.py  test_literature.py  test_parse_when.py  test_planning_integration.py  test_protection.py  test_routers.py  test_scoring.py  test_target_resolution.py
docs/: live-acceptance.md
supabase/: README.md
(+100 files in other folders)
