[project]
name = "astroscout-api"
version = "0.1.0"
description = "AstroScout API — astronomy data adapters + validation"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic-settings>=2.6",
  "httpx>=0.27",
  "astropy>=6.1",
  "astroplan>=0.10",
  "astroquery>=0.4.7",
  "numpy>=1.26",
]

[dependency-groups]
dev = [
  "httpx2>=2.5",
  "pytest>=8",
  "pytest-asyncio>=0.24",
  "ruff>=0.8",
  "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/astroscout_api"]
artifacts = ["src/astroscout_api/bortle/*.npy"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".vercel"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true   # astropy / astroplan / astroquery ship no type stubs

[tool.pytest.ini_options]
markers = ["integration: hits live external services (skipped in CI)"]
addopts = "-q"
